# minesweeper

./: CMakeLists.txt  README.md  main.cpp
inc/: field.hpp  game.hpp
src/: field.cpp  game.cpp
